[gd_scene load_steps=15 format=3 uid="uid://cnyjmj8tapk1n"]

[ext_resource type="Texture2D" uid="uid://burseqo854hpf" path="res://assets/background/academia-background.png" id="1_4om1e"]
[ext_resource type="Script" uid="uid://ba6icoor3vty" path="res://telas/tela_inicial.gd" id="1_y7p6k"]
[ext_resource type="Texture2D" uid="uid://cbm3djj3mh4ru" path="res://assets/logo.png" id="2_pq576"]
[ext_resource type="FontFile" uid="uid://0lorj40s1j2h" path="res://fontes/FONT_UI.TTF" id="3_cgsmg"]
[ext_resource type="Texture2D" uid="uid://nimbrl5cby15" path="res://assets/ui/botoes/button.png" id="4_o45mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouimv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gp687"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r4vng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7p6k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o45mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70njb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wqkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrcy1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxepn"]

[node name="tela_inicial" type="Node2D"]
script = ExtResource("1_y7p6k")

[node name="background" type="Sprite2D" parent="."]
modulate = Color(0.41, 0.41, 0.41, 1)
position = Vector2(704.889, 396.501)
scale = Vector2(1.37673, 1.37673)
texture = ExtResource("1_4om1e")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(640, 226)
scale = Vector2(7.9704, 7.9704)
texture = ExtResource("2_pq576")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 123.0
offset_top = 467.0
offset_right = 1183.0
offset_bottom = 573.0
theme_override_constants/separation = 6

[node name="botao_sair" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"

[node name="Button_Background3" type="Sprite2D" parent="HBoxContainer/botao_sair"]
position = Vector2(889, 51)
scale = Vector2(2.66237, 3.5539)
texture = ExtResource("4_o45mv")

[node name="SAIR" type="Button" parent="HBoxContainer/botao_sair"]
layout_mode = 1
anchors_preset = -1
offset_left = 800.0
offset_top = 21.0
offset_right = 986.0
offset_bottom = 72.0
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_cgsmg")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouimv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gp687")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_r4vng")
text = "SAIR
"

[node name="botao_cadastro" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"

[node name="Button_Background" type="Sprite2D" parent="HBoxContainer/botao_cadastro"]
position = Vector2(165, 51)
scale = Vector2(2.67969, 3.53572)
texture = ExtResource("4_o45mv")

[node name="CADASTRO" type="Button" parent="HBoxContainer/botao_cadastro"]
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 329.0
offset_bottom = 86.0
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_cgsmg")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_y7p6k")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_o45mv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_70njb")
text = "CADASTRO"

[node name="botao_login" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"

[node name="Button_Background2" type="Sprite2D" parent="HBoxContainer/botao_login"]
position = Vector2(506, 51)
scale = Vector2(2.66237, 3.5539)
texture = ExtResource("4_o45mv")

[node name="LOGIN" type="Button" parent="HBoxContainer/botao_login"]
layout_mode = 0
offset_left = 416.0
offset_top = 21.0
offset_right = 602.0
offset_bottom = 72.0
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("3_cgsmg")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_6wqkf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_yrcy1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxepn")
text = "LOGIN
"

[connection signal="pressed" from="HBoxContainer/botao_sair/SAIR" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="HBoxContainer/botao_cadastro/CADASTRO" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/botao_login/LOGIN" to="." method="_on_login_pressed"]
