[gd_scene load_steps=19 format=3 uid="uid://bni23wanoea4u"]

[ext_resource type="Texture2D" uid="uid://burseqo854hpf" path="res://assets/background/academia-background.png" id="1_5sd8u"]
[ext_resource type="FontFile" uid="uid://0lorj40s1j2h" path="res://fontes/FONT_UI.TTF" id="1_6hiqg"]
[ext_resource type="Script" uid="uid://d354kxgumy0xj" path="res://scripts/telas/tela_inicial.gd" id="1_lnd7q"]
[ext_resource type="Texture2D" uid="uid://cbm3djj3mh4ru" path="res://assets/logo.png" id="3_5sd8u"]
[ext_resource type="Texture2D" uid="uid://nimbrl5cby15" path="res://assets/ui/botoes/button.png" id="4_1xk73"]
[ext_resource type="PackedScene" uid="uid://clkmuf3bqcjpt" path="res://telas/tela_carregamento.tscn" id="4_5bdny"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lnd7q"]
texture = ExtResource("1_5sd8u")
modulate_color = Color(0.462291, 0.462291, 0.462291, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1xk73"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_51ijr"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bqkyk"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqkyk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o2s3i"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d01gr"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hv2jv"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8pmg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1xk73"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p6ggx"]
texture = ExtResource("4_1xk73")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v6a2c"]
texture = ExtResource("4_1xk73")

[node name="Tela_Inicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lnd7q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lnd7q")

[node name="CadastroBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 550.0
offset_right = 412.0
offset_bottom = 630.0
theme_override_fonts/font = ExtResource("1_6hiqg")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_1xk73")
theme_override_styles/hover = SubResource("StyleBoxTexture_51ijr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_51ijr")
theme_override_styles/normal = SubResource("StyleBoxTexture_bqkyk")
text = "CADASTRO"

[node name="LoginBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 550.0
offset_right = 823.0
offset_bottom = 630.0
theme_override_fonts/font = ExtResource("1_6hiqg")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqkyk")
theme_override_styles/hover = SubResource("StyleBoxTexture_o2s3i")
theme_override_styles/pressed = SubResource("StyleBoxTexture_d01gr")
theme_override_styles/normal = SubResource("StyleBoxTexture_hv2jv")
text = "LOGIN
"

[node name="SairBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 552.0
offset_right = 1234.0
offset_bottom = 632.0
theme_override_fonts/font = ExtResource("1_6hiqg")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_f8pmg")
theme_override_styles/hover = SubResource("StyleBoxTexture_1xk73")
theme_override_styles/pressed = SubResource("StyleBoxTexture_p6ggx")
theme_override_styles/normal = SubResource("StyleBoxTexture_v6a2c")
text = "SAIR
"

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(640, 267)
scale = Vector2(7.9704, 7.9704)
texture = ExtResource("3_5sd8u")

[node name="tela_carregamento" parent="." instance=ExtResource("4_5bdny")]
visible = false
